changed to jsx format, added css and public

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,14 @@
 </head>
 <body>
   <div id="root"></div> <!-- This is where React app will be -->
+
   <!-- React and ReactDOM libraries -->
+  <!-- Replace the CDN links with the appropriate versions for React and ReactDOM -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
+
   <!-- React app's main JavaScript file -->
-  <script src="../src/index.js"></script>
+  <!-- Update the src attribute to point to the correct location of your index.js file -->
+  <script src="/src/index.js"></script>
 </body>
 </html>
